# credagent

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  agent_permissions-keypair.json  credit_score_oracle-keypair.json  lending_pool-keypair.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
agent/: jest.config.js  package-lock.json  package.json
agent/config/: openclaw.json
agent/skills/collection-tracker/: SKILL.md
agent/src/: collectionAgent.js  creditAgent.js  index.js  lendingAgent.js  yieldAgent.js
agent/tests/: agents.test.js
cross-chain-liquidation/: README.md
cross-chain-liquidation/docs/: ARCHITECTURE_DIAGRAM.md  MVP_ARCHITECTURE.md  SEQUENCE.md
docs/: ARCHITECTURE.md  HACKATHON_PLAN.md  MVP_DAY1_ARCHITECTURE.md  RUNNING.md  cross-chain-liquidation.md
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
ml-api/: README.md  app.py  did.py  features.py  model.py  oracle_push.py  requirements.txt  scoring.py  zk_proofs.py
ml-api/tests/: conftest.py  test_all.py  test_api.py  test_credit_pipeline.py  test_scoring.py
programs/agent_permissions/: Cargo.toml
programs/agent_permissions/src/: errors.rs  lib.rs  state.rs
programs/agent_permissions/src/instructions/: check_and_spend.rs  emergency_pause.rs  mod.rs  register_agent.rs  set_daily_limit.rs
programs/credit_score_oracle/: Cargo.toml
programs/credit_score_oracle/src/: errors.rs  events.rs  lib.rs  state.rs
programs/credit_score_oracle/src/instructions/: admin.rs  batch_update.rs  grant_oracle_role.rs  initialize.rs  mod.rs  record_loan_event.rs  register_did.rs  update_score.rs
programs/lending_pool/: Cargo.toml
programs/lending_pool/src/: errors.rs  events.rs  helpers.rs  lib.rs  state.rs
programs/lending_pool/src/instructions/: accrue_interest.rs  admin.rs  conditional_disburse.rs  create_schedule.rs  deposit.rs  initialize_pool.rs  liquidate_escrow.rs  lock_collateral.rs  mark_default.rs  mod.rs  pull_installment.rs  release_collateral.rs  repay.rs  withdraw.rs
programs/lending_pool/tests/: mark_default_runtime.rs
scripts/: create-test-tokens.ts  deploy-devnet.sh  fund-agents.ts  init-agents.ts  prove-main-pool-yield.mjs  run-demo.ts  setup.sh  splCompat.ts  verify-yield-devnet.mjs
scripts/cross-chain/: day1-mvp-schema.ts
tests/: helpers.ts
tests/integration/: 01_golden_path.ts  02_default_path.ts  03_denial_path.ts  03_to_08_scenarios.ts  04_negotiation.ts  05_agent_borrow.ts  06_spending_limit.ts  07_emergency_pause.ts  08_interest_stream.ts  09_liquidation_intent_event.ts
tests/security/: attack_vectors.ts  conditional_gate_bypass.ts  double_pull.ts  escrow_unauthorized.ts  key_exposure.ts  safety_middleware.test.js
wdk-service/: README.md  jest.config.js  package-lock.json  package.json  verify-setup.js
wdk-service/idl/: agent_permissions.json  credit_score_oracle.json  lending_pool.json
wdk-service/scripts/: createTestTokens.js  verifySetup.js
wdk-service/src/: auditLog.js  auth.js  bridgeService.js  index.js  mcpBridge.js  mcpServer.js  safetyLayer.js  safetyMiddleware.js  seedPhrase.js  tokenOps.js  toolDefs.js  validation.js  walletService.js
wdk-service/tests/: auth.test.js  mcpBridge.test.js  mcpServer.test.js  walletService.test.js  wdkService.test.js
(+51 files in other folders)
