[package]
name = "agent-permissions"
version = "0.1.0"
description = "Role-based access, spending limits, circuit breaker for CredAgent"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_permissions"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
