[package]
name = "agent-permissions"
version = "0.2.0"
description = "4-tier permission model, circuit breaker, time-locked admin rotation for CredAgent"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_permissions"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
