[package]
name = "credit-score-oracle"
version = "0.1.0"
description = "On-chain ML-backed credit scores with DID identity and ZK proof hashes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_score_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
