[package]
name = "lending-pool"
version = "0.1.0"
description = "Autonomous lending with escrow, conditional disbursement, installments, interest streaming"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
agent-permissions = { path = "../agent_permissions", features = ["cpi"] }
