[package]
name = "lending-pool"
version = "0.1.0"
description = "Autonomous lending with escrow, conditional disbursement, installments, interest streaming"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
agent-permissions = { path = "../agent_permissions", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "=2.1.15"
solana-sdk = "=2.1.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
